--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO Meta Tags -->
     <title>Dott.ssa Virginia Berlose - Psicologa e Specialista in Neuropsicologia</title>
+    <meta name="description" content="Sito della Dott.ssa Virginia Berlose, psicologa e specialista in neuropsicologia a Ferrara e Lendinara (RO). Supporto per età evolutiva e adulti, valutazione DSA e ADHD, sostegno psicologico.">
+    <meta name="keywords" content="psicologa ferrara, neuropsicologia sviluppo, psicologa lendinara, virginia berlose, valutazione dsa, adhd, sostegno psicologico bambini, parent training, psicologa roigo">
+    <meta name="author" content="Dott.ssa Virginia Berlose">
+    <link rel="canonical" href="https://www.virginiaberlose.it"> <!-- Sostituisci con il tuo URL finale -->
+
+    <!-- Open Graph Meta Tags (per la condivisione sui social) -->
+    <meta property="og:title" content="Dott.ssa Virginia Berlose - Psicologa e Specialista in Neuropsicologia">
+    <meta property="og:description" content="Supporto per età evolutiva e adulti, valutazione DSA e ADHD, sostegno psicologico a Ferrara e Lendinara (RO).">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.virginiaberlose.it"> <!-- Sostituisci con il tuo URL finale -->
+    <meta property="og:image" content="https://placehold.co/1200x630/F9EBE4/8F6859?text=Dott.ssa+Virginia+Berlose"> <!-- Sostituisci con un URL di un'immagine rappresentativa -->
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -119,6 +132,45 @@
         }
 
     </style>
+
+    <!-- JSON-LD Structured Data (Schema.org) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Psychologist",
+      "name": "Dott.ssa Virginia Berlose",
+      "description": "Psicologa e specialista in Neuropsicologia per l'età evolutiva e l'età adulta. Offre servizi di valutazione, riabilitazione, potenziamento cognitivo e sostegno psicologico.",
+      "image": "https://placehold.co/800x1000/F9EBE4/8F6859?text=Virginia+Berlose",
+      "telephone": "+393466045612",
+      "email": "virginia.berlose@gmail.com",
+      "url": "https://www.virginiaberlose.it",
+      "address": [
+        {
+          "@type": "PostalAddress",
+          "streetAddress": "Via Vasco Zappaterra, 13/7",
+          "addressLocality": "Ferrara",
+          "postalCode": "44122",
+          "addressCountry": "IT"
+        },
+        {
+          "@type": "PostalAddress",
+          "streetAddress": "Via Argine Sinistro, 4",
+          "addressLocality": "Lendinara",
+          "addressRegion": "RO",
+          "postalCode": "45026",
+          "addressCountry": "IT"
+        }
+      ],
+      "knowsAbout": [
+        "Neuropsicologia",
+        "Psicologia dello sviluppo",
+        "Disturbi Specifici dell'Apprendimento (DSA)",
+        "ADHD",
+        "Sostegno alla genitorialità",
+        "Riabilitazione cognitiva"
+      ]
+    }
+    </script>
 </head>
 
 <body class="antialiased">
@@ -149,7 +201,7 @@
 
     <!-- Header / Hero Section -->
     <header class="hero-bg min-h-[calc(100vh-53px)] flex items-center justify-center p-6 relative overflow-hidden">
-        <div class="text-center max-w-3xl mx-auto z-10 relative">
+        <div class="text-center max-w-4xl mx-auto z-10 relative">
             <div class="reveal visible">
                 <h1 class="text-4xl md:text-6xl font-bold tracking-tight text-[--primary-darker] mb-4">
                     Dott.ssa Virginia Berlose
@@ -157,7 +209,7 @@
                 <p class="text-xl md:text-2xl text-primary-darker font-medium mb-8">
                     Psicologa e specialista in Neuropsicologia | Età Evolutiva e Adulti
                 </p>
-                <p class="max-w-2xl mx-auto text-lg text-text-dark/90 font-medium mb-10">
+                <p class="max-w-3xl mx-auto text-lg text-text-dark/90 font-medium mb-10">
                     Uno spazio di ascolto e consulenza per promuovere il benessere psicologico e accompagnarti in un percorso di crescita personale e consapevolezza.
                 </p>
                 <a href="#contatti" class="hero-button inline-block font-semibold py-3 px-8 rounded-full transition-all duration-300 transform hover:scale-105">
@@ -171,8 +223,8 @@
 
         <!-- Sezione Ambiti di Intervento -->
         <section id="aree-intervento" class="py-20 md:py-32">
-            <div class="container mx-auto px-6 max-w-5xl">
-                <div class="text-center reveal max-w-3xl mx-auto">
+            <div class="container mx-auto px-6 max-w-7xl">
+                <div class="text-center reveal max-w-4xl mx-auto">
                     <h2 class="text-3xl md:text-4xl font-bold text-primary-darker mb-4">Ambiti di Intervento</h2>
                     <p class="text-lg text-text-dark/90 mb-16">
                         Il mio lavoro si articola in diversi servizi clinici, pensati per offrire un supporto completo e personalizzato a bambini, adolescenti, adulti e famiglie.
@@ -217,29 +269,29 @@
 
         <!-- Sezione Il Mio Approccio -->
         <section id="approccio" class="py-20 md:py-32 section-bg-gradient">
-            <div class="container mx-auto px-6 max-w-4xl">
+            <div class="container mx-auto px-6 max-w-5xl">
                 <div class="text-center reveal">
                     <h2 class="text-3xl md:text-4xl font-bold text-primary-darker mb-4">Il Mio Approccio</h2>
-                    <p class="text-lg text-text-dark/90 max-w-3xl mx-auto mb-16">
+                    <p class="text-lg text-text-dark/90 max-w-4xl mx-auto mb-16">
                         Un percorso psicologico è un viaggio che facciamo insieme. Ecco le tappe principali che seguiremo per raggiungere i tuoi obiettivi.
                     </p>
                 </div>
-                <div class="timeline space-y-8">
+                <div class="timeline space-y-8 max-w-4xl mx-auto">
                     <!-- Step 1 -->
                     <div class="reveal step-card relative pl-24">
-                        <div class="section-icon absolute left-0 top-0"><span class="material-symbols-rounded">mark_chat_read</span></div>
+                        <div class="section-icon absolute left-0 top-0"><span class="material-symbols-rounded">question_answer</span></div>
                         <h3 class="font-bold text-xl text-primary-darker mb-2">Primo Contatto</h3>
                         <p>Puoi contattarmi via email o telefono. Fisseremo un primo colloquio conoscitivo, online o in studio, per esplorare la tua richiesta.</p>
                     </div>
                     <!-- Step 2 -->
                     <div class="reveal step-card relative pl-24" style="transition-delay: 100ms;">
-                        <div class="section-icon absolute left-0 top-0"><span class="material-symbols-rounded">plagiarism</span></div>
+                        <div class="section-icon absolute left-0 top-0"><span class="material-symbols-rounded">psychology</span></div>
                         <h3 class="font-bold text-xl text-primary-darker mb-2">Valutazione</h3>
                         <p>Dedicheremo i primi incontri alla conoscenza e all'analisi del problema, se necessario tramite una valutazione psicodiagnostica o neuropsicologica.</p>
                     </div>
                     <!-- Step 3 -->
                     <div class="reveal step-card relative pl-24" style="transition-delay: 200ms;">
-                        <div class="section-icon absolute left-0 top-0"><span class="material-symbols-rounded">route</span></div>
+                        <div class="section-icon absolute left-0 top-0"><span class="material-symbols-rounded">spa</span></div>
                         <h3 class="font-bold text-xl text-primary-darker mb-2">Percorso</h3>
                         <p>Insieme, definiremo gli obiettivi e progetteremo un percorso personalizzato (sostegno, riabilitazione, parent training) basato sulle tue esigenze.</p>
                     </div>
@@ -258,9 +310,9 @@
 
         <!-- Sezione Su di Me -->
         <section id="chi-sono" class="py-16 md:py-24">
-            <div class="container mx-auto px-6 max-w-6xl grid md:grid-cols-5 gap-12 md:gap-16 items-center">
+            <div class="container mx-auto px-6 max-w-7xl grid md:grid-cols-5 gap-12 md:gap-16 items-center">
                 <div class="reveal md:col-span-2">
-                     <img src="https://placehold.co/800x1000/F9EBE4/8F6859?text=Virginia+Berlose" alt="Foto professionale di Virginia Berlose" class="rounded-xl w-full h-auto object-cover">
+                     <img src="https://placehold.co/800x1000/F9EBE4/8F6859?text=Virginia+Berlose" alt="Dott.ssa Virginia Berlose, psicologa specialista in neuropsicologia" class="rounded-xl w-full h-auto object-cover">
                 </div>
                 <div class="reveal text-left md:col-span-3" style="transition-delay: 100ms;">
                      <h2 class="text-3xl md:text-4xl font-bold text-primary-darker mb-6">Su di Me</h2>
@@ -278,8 +330,8 @@
 
         <!-- Sezione Contatti e Sedi Unificata -->
         <section id="contatti" class="py-20 md:py-32 section-bg-gradient-inverted">
-            <div class="container mx-auto px-6 max-w-5xl">
-                <div class="text-center reveal max-w-4xl mx-auto">
+            <div class="container mx-auto px-6 max-w-7xl">
+                <div class="text-center reveal max-w-5xl mx-auto">
 
                     <h2 class="text-3xl md:text-4xl font-bold text-primary-darker mb-12">Contatti e Sedi</h2>
 
